Fix hero size on mobile viewport.

--- a/assets/css/_theme.scss
+++ b/assets/css/_theme.scss
@@ -115,7 +115,11 @@ section.row {
     background-attachment: fixed;
     background-size: cover;
 
-    height: 80vh;
+    @include breakpoint(medium) {
+      height: 80vh;
+    }
+
+    
 
 	.hero-inner {
 		@extend .flex-row;
